[package]
name = "bevy_matchbox_nostr"
version = "0.6.0"
authors = [
  "Johan Helsing <johanhelsing@gmail.com>",
  "Garry O'Donnell <garry.euan.odonnell@ntlworld.com",
  "stu <stutxo@proton.me>",
]
edition = "2021"
description = "A Bevy extension for Matchbox WebRtc networking"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "webrtc", "peer-to-peer", "networking", "wasm"]
categories = [
  "network-programming",
  "game-development",
  "wasm",
  "web-programming",
]
repository = "https://github.com/stum0/matchbox_nostr"
homepage = "https://github.com/stum0/matchbox_nostr"
readme = "../README.md"

[features]
ggrs = ["matchbox_socket_nostr/ggrs"]


[dependencies]
bevy = { version = "0.10", default-features = false }
matchbox_socket_nostr = { path = "../matchbox_socket_nostr", version = "0.6.2" }
